welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:3: error: not found: value posfinale
	if (posfinale() && (getDirection() == Direction.EST) ) {
            ^ZigZag:8: error: not found: value posfinale
	 else if ((posfinale()) && (getDirection() == Direction.OUEST) ) {
                   ^